merge-upstream: continue fixing dark mode things

--- a/src/components/backpack/backpack.css
+++ b/src/components/backpack/backpack.css
@@ -90,13 +90,6 @@
     background: $ui-primary;
 }
 
-.backpack-item img {
-    mix-blend-mode: multiply; /* Make white transparent for thumnbnails */
-}
-[theme="dark"] .backpack-item img {
-    mix-blend-mode: normal;
-}
-
 .more {
     background: $looks-secondary;
     color: $ui-white;
