--- a/src/components/crash-message/crash-message.css
+++ b/src/components/crash-message/crash-message.css
@@ -3,7 +3,7 @@
 @import "../../css/typography.css";
 
 .crash-wrapper {
-    background-color: $motion-primary;
+    background-color: $menu-bar-background;
     width: 100%;
     height: 100%;
     display: flex;
