--- a/src/components/library-item/library-item.css
+++ b/src/components/library-item/library-item.css
@@ -14,7 +14,7 @@
     padding: 1rem 1rem 0 1rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: $text-primary;
-    background: white;
+    background: $ui-white;
     border-width: 2px;
     border-style: solid;
     border-color: $ui-black-transparent;
