--- a/src/components/tag-button/tag-button.css
+++ b/src/components/tag-button/tag-button.css
@@ -5,7 +5,7 @@
     padding: .625rem 1rem;
     background: $looks-secondary;
     border-radius: 1.375rem;
-    color: $ui-white;
+    color: white;
     height: $library-filter-bar-height;
 }
 
